changes case on taxes and fixed line spacing

--- a/Moovn/static/css/main.css
+++ b/Moovn/static/css/main.css
@@ -1706,6 +1706,12 @@ header {
 .overview-tax-container, .overview-cost-container {
   padding-top: 3em; }
 
+.overview-tax-container p {
+  line-height: 1.5; }
+
+.overview-cost-container p {
+  line-height: 1.5; }
+
 .overview-cityImg-container, .overview-cityImg-container-mobile {
   padding-left: 0em;
   position: relative; }
